# robotics_software_engineer

module_1_assignment/: Readme.md
module_1_assignment/T1_files/: T1_code.cpp
module_1_assignment/T2_files/: T2_code.cpp
module_1_assignment/T3_files/: CMakeLists.txt
module_1_assignment/T3_files/src/: DistanceSensor.h  Sensor.h  TemperatureSensor.h  main.cpp
module_2_assignment/: Readme.md
module_2_assignment/task1&2/: CMakeLists.txt  package.xml
module_2_assignment/task1&2/launch/: turtlesim_launch.py
module_2_assignment/task3/: CMakeLists.txt  package.xml
module_2_assignment/task4/: CMakeLists.txt  package.xml
module_2_assignment/task4/launch/: dynamic_launch.py
module_2_assignment/task4/src/: turtlesim_dynamic.cpp
