<?xml version="1.0"?>
<package format="2">
  <name>task1</name>
  <version>0.0.1</version>
  <description>Module 2 Assignment for Custom ROS 2 Node</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>turtlesim</exec_depend>

  <export>
  </export>
</package>

